# MSA-XAI

./: .gitignore  LICENSE  README.md  pyproject.toml
CNN/: evaluation.py  job.py  model.py  msa_cnn.py
DCGAN/: CelebA GAN.ipynb  fixed_noise.t  model.py  msa_utils.py
DCGAN/.ipynb_checkpoints/: CelebA GAN-checkpoint.ipynb
LLM/: accuracies_high.json  accuracies_low.json  countries of the world.csv  country_capitals.csv  mixtral_msa.ipynb  sentences.csv  shapley_analysis.csv  tasks.py  time_taken_high.json  time_taken_low.json
LLM/pickled_results/: shapley_analysis_mixtral_llm_20240317-083013.pkl
MLP/: analysis notebook.ipynb  data.py  evaluation.py  job.py  model.py  msa_mlp.py
MLP/models/l1 regularization/10/: trial_0.pt  trial_1.pt  trial_2.pt  trial_3.pt  trial_4.pt  trial_5.pt  trial_6.pt  trial_7.pt  trial_8.pt  trial_9.pt
MLP/models/l1 regularization/100/: trial_0.pt  trial_1.pt  trial_2.pt  trial_3.pt  trial_4.pt  trial_5.pt  trial_6.pt  trial_7.pt  trial_8.pt  trial_9.pt
MLP/models/l1 regularization/105/: trial_0.pt  trial_1.pt  trial_2.pt  trial_3.pt  trial_4.pt  trial_5.pt  trial_6.pt  trial_7.pt  trial_8.pt  trial_9.pt
MLP/models/l1 regularization/110/: trial_0.pt  trial_1.pt  trial_2.pt  trial_3.pt  trial_4.pt  trial_5.pt  trial_6.pt  trial_7.pt  trial_8.pt  trial_9.pt
MLP/models/l1 regularization/115/: trial_0.pt  trial_1.pt  trial_2.pt  trial_3.pt  trial_4.pt  trial_5.pt  trial_6.pt  trial_7.pt  trial_8.pt  trial_9.pt
MLP/models/l1 regularization/120/: trial_0.pt  trial_1.pt  trial_2.pt  trial_3.pt  trial_4.pt  trial_5.pt  trial_6.pt  trial_7.pt  trial_8.pt  trial_9.pt
MLP/models/l1 regularization/125/: trial_0.pt  trial_1.pt  trial_2.pt  trial_3.pt  trial_4.pt  trial_5.pt  trial_6.pt  trial_7.pt  trial_8.pt  trial_9.pt
MLP/models/l1 regularization/130/: trial_0.pt  trial_1.pt  trial_2.pt  trial_3.pt  trial_4.pt  trial_5.pt  trial_6.pt  trial_7.pt  trial_8.pt  trial_9.pt
MLP/models/l1 regularization/135/: trial_0.pt  trial_1.pt  trial_2.pt  trial_3.pt  trial_4.pt  trial_5.pt  trial_6.pt  trial_7.pt  trial_8.pt  trial_9.pt
MLP/models/l1 regularization/140/: trial_0.pt  (+9 more)
(+2300 files in other folders)
